# curriculum

./: .gitmodules  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
automation/: build.sh
core/: Cargo.toml
core/src/: lib.rs  prelude.rs
core/src/contact/: mod.rs  template.html
core/src/curriculum/: curriculum.json  mod.rs  template.html
core/src/education/: mod.rs
core/src/experience/: mod.rs  template.html
core/src/info_bar/: mod.rs
core/src/knowledge/: mod.rs
core/src/section/: mod.rs
curriculum/src/: lib.rs
curriculum/web-components/web-contact/: web-contact.html  web-contact.js
curriculum/web-components/web-curriculum/: web-curriculum.html  web-curriculum.json  web-curriculum.pt.json
curriculum/web-components/web-experience/: web-experience.html  web-experience.js
curriculum/web-components/web-knowledge/: web-knowledge.js
gui/: finances_core.js  finances_core_bg.wasm  index.html  package.json  web_curriculum.js  web_curriculum_bg.wasm
gui/components/veritas-clock/: template.html
scripts/: build.sh
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  prelude.rs
src/contact/: mod.rs
src/curriculum/: curriculum.json  mod.rs  template.html
src/education/: mod.rs
src/experience/: mod.rs  template.html
src/info_bar/: mod.rs
src/knowledge/: mod.rs
src/section/: mod.rs
web-components/web-curriculum/: web-curriculum.html  web-curriculum.json
web-components/web-infobar/: web-infobar.js
web-components/web-knowledge/: web-knowledge.html
web-components/web-section/: web-section.js
(+2 files in other folders)
