[package]
name    = "web-curriculum"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde         = { version = "1.0.104", features = [ "derive" ] }
web-component = { path = "gui/web-component/rust" }


[dependencies.web-sys]
version  = "0.3.35"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    "console"
]